fix page flickerting

--- a/src/Aco228.BlazorShared/Components/Page/PageBase.razor.css
+++ b/src/Aco228.BlazorShared/Components/Page/PageBase.razor.css
@@ -1,5 +1,6 @@
 .page {
     display: flex;
+    position: relative;
     flex-direction: column;
     min-height: 100vh;
     padding: 2rem 2.5rem;
